2. If LMS's lang is returned as "?", then assume "en"
3. Remove non-half-increment ratings from mobile view, as these were not in
   desktop view.
4. Fix menu tooltips for tracks sometimes showing HTML.
5. Hide option to show ratings if LMS is started with "--nostatistics"
6. Be more consistent with showing track info for tracks.
7. Show track ratings in album track list in MAI view.

3.1.2
-----
1. If browsing into a composer via "All Artists" try not to show artist
   (composer) on track line.
2. Fix artist not showing if "Show artist first in now-playing and queue" is
   set to "No" in Material's server side settings.
3. If showing Pandora thumbs up/down then don't show technical info in desktop
   layout bottom bar.
4. Prevent technical info from overlapping track meta-data in desktop layout
   bottom bar.

3.1.1
-----
1. Fix track listing in MAI view.
2. Fix track listing when showing more than 100 tracks.
3. When choosing if to show composers, etc., look at all in case an artist type
   has multiple entries.
4. Use correct tags parameter to return multi-artist entries when browsing
   tracks.
5. Strip tags when showing titles in sub-toolbar, etc.
6. Fix slow searches caused by asking for artist role metadata.

3.1.0
-----
 1. Make artist entries in browse track listings clickable.
 2. Show composers, etc., when browsing album or playlist tracks.
 3. Make album entries in playlist track listings clickable.
 4. Change repeat button behavior; off, all, single, DSTM.
 5. Show Pandora thumbs up/down buttons where ratings would be in bottom bar of
    desktop layout.
 6. Support LMS 8.4 parseURLs.
 7. Add samplesize to displayed technical info.
 8. Allow disc-title in comments to be preceded by "TITLE=", "DISCTITLE=",
    "TITLE:", or "DISCTITLE:" (if using semi-colon separated option).
 9. Add handling of SVG icons from plugin's Extras pages.
10. Add BAND and CONDUCTOR support to custom actions.