@@ -9,6 +9,7 @@
 5. Hide option to show ratings if LMS is started with "--nostatistics"
 6. Be more consistent with showing track info for tracks.
 7. Show track ratings in album track list in MAI view.
+8. Ensure player settings are not null.
 
 3.1.2
 -----
